--- a/CodeHub/Application/Views/Start/Start.html
+++ b/CodeHub/Application/Views/Start/Start.html
@@ -34,10 +34,16 @@
         <h2>Kolla in de här länkarna: </h2>
         <ul>
             <li>
+                <a href="Content/Presentation.pdf">Kvällens presentation</a>
+            </li>
+            <li>
                 <a href="http://getbootstrap.com/css">Bootstrap</a>
             </li>
             <li>
                 <a href="http://fortawesome.github.io/Font-Awesome/icons/">Fontawesomes ikoner</a>
+            </li>
+            <li>
+                <a href="http://coolhomepages.com/Personal--Portfolios/design-ideas.html?view_type=medium&view_sort=date%20added&sort_type=DESC">Designinspiration - coolhomepages</a>
             </li>
         </ul>
     </div>
