--- a/CodeHub/Application/Views/Start/Start.html
+++ b/CodeHub/Application/Views/Start/Start.html
@@ -45,6 +45,9 @@
             <li>
                 <a href="http://coolhomepages.com/Personal--Portfolios/design-ideas.html?view_type=medium&view_sort=date%20added&sort_type=DESC">Designinspiration - coolhomepages</a>
             </li>
+            <li>
+                <a href="https://angularjs.org/">Angular</a>
+            </li>
         </ul>
     </div>
 </div>
