--- a/CodeHub/Application/Views/Portfolio/Portfolio.css
+++ b/CodeHub/Application/Views/Portfolio/Portfolio.css
@@ -1,6 +1,6 @@
 ﻿.portfolio .view {
     background:#000;
-    height:1200px;
+    min-height:800px;
     left:0;
     right:0;
     margin-top:70px;
